Fixed Spacing

--- a/yeomanApp/app/styles/main.css
+++ b/yeomanApp/app/styles/main.css
@@ -22,7 +22,7 @@ body {
   margin: 30px auto 0 auto;
   width: 300px;
   font-size: 20px;
-  line-height: 40px;
+  line-height: 30px;
   background-color: #1FC025;
   color: #000000;
   border-radius: 6px;
